# flows-example-lead-qualification-email

flow_use_case/: README.md  crewai_flow.html  email_draft.txt  pyproject.toml
flow_use_case/src/flow_use_case/: main.py
flow_use_case/src/flow_use_case/crews/email_engagement_crew/: email_engagement_crew.py
flow_use_case/src/flow_use_case/crews/email_engagement_crew/config/: tasks.yaml
flow_use_case/src/flow_use_case/crews/lead_qualification_crew/: lead_qualification_crew.py
flow_use_case/src/flow_use_case/crews/lead_qualification_crew/config/: agents.yaml  tasks.yaml
